added story scenes

--- a/renderer/prompt_page.html
+++ b/renderer/prompt_page.html
@@ -28,6 +28,11 @@
         </button>
     </div>
     <script type="module" src="scripts/index.js"></script>
+    <script>
+        document.getElementById('next_').addEventListener('click', () => {
+            window.location.href = 'story_scenes.html';
+        });
+    </script>
 </body>
 
 </html>
