--- a/renderer/story_scenes.html
+++ b/renderer/story_scenes.html
@@ -22,36 +22,22 @@
         </div>
 
         <div id="generated_scenes" style="width: 90%;">
-            <div id="scene_1" style="position: relative; width: 45%;height: 200px;">
-                <div
-                    style="width: 100px;padding: 10px;height: auto;background-color: white;border-radius: 5px;text-align: center;margin-left: 20px;">
-                    Scene1</div>
-                <div style="width: 100%;height:80%;background-color: gray;border-radius: 10px;background-color: #88808075;
-                    overflow-y: scroll;padding: 10px;    display: flex;justify-content: center;align-items: center;
-                    scrollbar-width: none; /* Firefox */
-                    -ms-overflow-style: none;  /* IE and Edge */
-                    box-shadow: 2px 2px 10px gray;
-                ">
-                    <textarea name="scene_output_1" id="scene_output_1" cols="30"
-                        style="max-height: 110px; height: 95%; outline: none; border: none; width: 95%; font-size: 1.9vh;background-color: transparent;color: white;">Once we get the prompts, we will save it into google sheets, you're BG  friend will look into them and select the best scenes. Than he will copy & paste then text-to-image or video prompts to generate the  content.</textarea>
+            <div id="scene_1" class="generated_scenes_">
+                <div class="scene_ids_">Scene1</div>
+                <div class="scene_prompt_">
+                    <textarea class="scene_prompt_textarea" name="scene_output_1" id="scene_output_1" cols="30">Once we get the prompts, we will save it into google sheets, you're BG  friend will look into them and select the best scenes. Than he will copy & paste then text-to-image or video prompts to generate the  content.
+                    </textarea>
                 </div>
-                <div id="scene1_control" style="
-                    width: 99%;height: 40px;border-radius: 10px;display: flex;justify-content: flex-end;align-items: center;
-                    position:absolute;  bottom: 0px;column-gap: 10px; bottom: 5px;             ">
-                    <button type="button" style="background-color: transparent;outline: none;border: none;">
-                        <img src="../assets/img/refresh.png" width="30" height="30"
-                            style="background-color: transparent;" alt="" srcset="">
+                <div class="scenes_controls_">
+                    <button type="button" class="refresh_prompt_btn_">
+                        <img src="../assets/img/refresh.png" width="30" height="30" style="background-color:transparent;" alt="" srcset="">
                     </button>
-                    <button id="update_prompt"
-                        style="height: auto;border-radius: 5px; padding: 10px 25px;font-size: 1.3vh;">
-                        Update
-                    </button>
+                    <button id="update_prompt" class="update_prompt_btn_">Update</button>
                 </div>
             </div>
 
         </div>
 
-        
         <button id="next_">
             Next
         </button>
