--- a/renderer/story_scenes.html
+++ b/renderer/story_scenes.html
@@ -18,7 +18,6 @@
     <div class="content">
         <div id="message">
             <p style="font-size: 7vh;color: white;font-weight: bold;">We generated some Scenes for you</p>
-            <!-- <p style="font-size: 3vh;color: white;font-weight: normal;">And leave everything on us</p> -->
         </div>
 
         <div id="AI_generated_scenes">
@@ -51,6 +50,61 @@
                 </div>
             </div>
 
+            <div id="scene_1" class="generated_scenes_">
+                <div class="scene_ids_">Scene1</div>
+                <div class="scene_prompt_">
+                    <textarea class="scene_prompt_textarea" name="scene_output_1" id="scene_output_1" cols="30">Once we get the prompts, we will save it into google sheets, you're BG  friend will look into them and select the best scenes. Than he will copy & paste then text-to-image or video prompts to generate the  content.
+                    </textarea>
+                </div>
+                <div class="scenes_controls_">
+                    <button type="button" class="refresh_prompt_btn_">
+                        <img src="../assets/img/refresh.png" width="30" height="30" style="background-color:transparent;" alt="" srcset="">
+                    </button>
+                    <button id="update_prompt" class="update_prompt_btn_">Update</button>
+                </div>
+            </div>
+
+            <div id="scene_2" class="generated_scenes_">
+                <div class="scene_ids_">Scene1</div>
+                <div class="scene_prompt_">
+                    <textarea class="scene_prompt_textarea" name="scene_output_1" id="scene_output_1" cols="30">Once we get the prompts, we will save it into google sheets, you're BG  friend will look into them and select the best scenes. Than he will copy & paste then text-to-image or video prompts to generate the  content.
+                    </textarea>
+                </div>
+                <div class="scenes_controls_">
+                    <button type="button" class="refresh_prompt_btn_">
+                        <img src="../assets/img/refresh.png" width="30" height="30" style="background-color:transparent;" alt="" srcset="">
+                    </button>
+                    <button id="update_prompt" class="update_prompt_btn_">Update</button>
+                </div>
+            </div>
+
+            <div id="scene_1" class="generated_scenes_">
+                <div class="scene_ids_">Scene1</div>
+                <div class="scene_prompt_">
+                    <textarea class="scene_prompt_textarea" name="scene_output_1" id="scene_output_1" cols="30">Once we get the prompts, we will save it into google sheets, you're BG  friend will look into them and select the best scenes. Than he will copy & paste then text-to-image or video prompts to generate the  content.
+                    </textarea>
+                </div>
+                <div class="scenes_controls_">
+                    <button type="button" class="refresh_prompt_btn_">
+                        <img src="../assets/img/refresh.png" width="30" height="30" style="background-color:transparent;" alt="" srcset="">
+                    </button>
+                    <button id="update_prompt" class="update_prompt_btn_">Update</button>
+                </div>
+            </div>
+
+            <div id="scene_2" class="generated_scenes_">
+                <div class="scene_ids_">Scene1</div>
+                <div class="scene_prompt_">
+                    <textarea class="scene_prompt_textarea" name="scene_output_1" id="scene_output_1" cols="30">Once we get the prompts, we will save it into google sheets, you're BG  friend will look into them and select the best scenes. Than he will copy & paste then text-to-image or video prompts to generate the  content.
+                    </textarea>
+                </div>
+                <div class="scenes_controls_">
+                    <button type="button" class="refresh_prompt_btn_">
+                        <img src="../assets/img/refresh.png" width="30" height="30" style="background-color:transparent;" alt="" srcset="">
+                    </button>
+                    <button id="update_prompt" class="update_prompt_btn_">Update</button>
+                </div>
+            </div>
         </div>
 
         <button id="next_">
