--- a/renderer/index.html
+++ b/renderer/index.html
@@ -19,7 +19,7 @@
       <p style="font-size: 7vh;color: white;font-weight: bold;">Welcome To Story Generator</p>
       <p style="font-size: 3vh;color: white;font-weight: normal;">Let Build something Special Together</p>
     </div>
-    <button id="next_">
+    <button id="next_" class="page_control_">
       Start Now
     </button>
   </div>
