--- a/renderer/generate_audio.html
+++ b/renderer/generate_audio.html
@@ -16,7 +16,7 @@
     </header>
 
     <div id="upload_audio"
-        style="padding: 40px; position: absolute;left: 30%;top: 35%; width: 40%;height: 30%;border-radius: 10px;background-color: rgb(255, 255, 255);">
+        style="z-index: 10; display: none; padding: 40px; position: absolute;left: 30%;top: 35%; width: 40%;height: 30%;border-radius: 10px;background-color: rgb(255, 255, 255);">
         <p style="margin-bottom: 20px; font-size: 5vh;width: 100%;text-align: center;">Select Speaker Voice</p>
         <div style=" width: 96%; display: flex; column-gap: 10px;justify-content: flex-start;align-items: center;">
             <p style="font-size: 2vh;">Select Speaker Voice: </p>
@@ -31,12 +31,12 @@
             </button>
             <button onclick="upload_audio()" class="page_control_" id="upload_and_generate"
                 style="display: flex; align-items: center; column-gap: 5px; width: 35%; height: 100%; position: relative;display: flex;justify-content: center;align-items: center;">
-                
-                <p id="generate_text">Generate Audio</p>
+                Generate Audio
+                <!-- <p id="generate_text">Generate Audio</p> 
 
                 <div class="loader" id="loading_animation"
                     style="display: none; border: 4px solid rgba(0, 0, 0, 0.1); border-top: 4px solid rgb(255, 255, 255); border-radius: 50%; width: 3vh; height: 3vh; animation: spin 2s linear infinite;">
-                </div>
+                </div> -->
             </button>
 
         </div>
@@ -52,14 +52,22 @@
             </div>
         </div>
 
+        <p id="generation_output" style="font-size: 1.5vh;color: white;">
+            Preparing Video...
+        </p>
+
         <div style="width: 40%;height: 8%; display: flex;justify-content: center;align-items: center;column-gap: 10px;">
-            <button class="page_control_" id="back_"
+            <button onclick="go_back()" class="page_control_" id="back_"
                 style="background-color: rgba(128, 128, 128, 0.308); width: 45%; height: 100%;">
                 Back
             </button>
 
-            <button onclick="open_upload_popup()" class="page_control_" id="next_" style="width: 45%; height: 100%;">
-                Generate Audio
+            <button onclick="open_upload_popup()" class="page_control_" id="next_" style="display: flex; align-items: center; column-gap: 5px; width: 35%; height: 100%; display: flex;justify-content: center;align-items: center;">
+                <p id="generate_text">Generate Audio</p>
+
+                <div class="loader" id="loading_animation"
+                    style="display: none; border: 4px solid rgba(0, 0, 0, 0.1); border-top: 4px solid rgb(255, 255, 255); border-radius: 50%; width: 3vh; height: 3vh; animation: spin 2s linear infinite;">
+                </div>
             </button>
         </div>
 
@@ -106,6 +114,9 @@
             generateText.style.display = "flex";
         }
 
+        function go_back(){
+            history.back()
+        }
     </script>
 </body>
 
