update image rendering

--- a/renderer/image_render.html
+++ b/renderer/image_render.html
@@ -17,7 +17,7 @@
 
     <div class="content" style="row-gap: 20px">
         <div id="message">
-            <p style="font-size: 7vh;color: white;font-weight: bold;">Here is most beautiful Part  </p>
+            <p style="font-size: 7vh;color: white;font-weight: bold;">Here is the most beautiful Part  </p>
         </div>
 
         <div id="redering_image_container" 
@@ -135,14 +135,14 @@
             </div>
         </div>
 
-        <div style="z-index: 11; position: absolute; bottom: 10px; left: 50%; transform: translateX(-50%); width: 40%;height: 5%; display: flex;justify-content: center;align-items: center;column-gap: 10px;">
+        <div style="z-index: 11; position: absolute; bottom: 10px; left: 50%; transform: translateX(-50%); width: 98%;height: 5%; display: flex;justify-content: space-between;align-items: center;column-gap: 10px;">
             <button onclick="go_back()" class="page_control_" id="back_"
-            style="z-index: 10; background-color: rgba(128, 128, 128, 0.308); width: 45%; height: 100%;">
+                style="font-size: 2vh; z-index: 10; background-color: rgba(128, 128, 128, 0.308); width: 12%; height: 100%;">
                 Back
             </button>
 
-            <button onclick="open_upload_popup()" class="page_control_" id="next_" style="display: flex; align-items: center; column-gap: 5px; width: 35%; height: 100%; display: flex;justify-content: center;align-items: center;">
-                <p id="generate_text">Generate Audio</p>
+            <button onclick="open_upload_popup()" class="page_control_" id="next_" style="display: flex; font-size: 2vh; align-items: center; column-gap: 5px; width: 12%; height: 100%; display: flex;justify-content: center;align-items: center;">
+                <p id="generate_text">Generate Video</p>
 
                 <div class="loader" id="loading_animation"
                     style="display: none; border: 4px solid rgba(0, 0, 0, 0.1); border-top: 4px solid rgb(255, 255, 255); border-radius: 50%; width: 3vh; height: 3vh; animation: spin 2s linear infinite;">
