--- a/renderer/generate_video.html
+++ b/renderer/generate_video.html
@@ -6,6 +6,182 @@
     <title>My Electron App</title>
     <link rel="stylesheet" href="styles/index.css">
     <link rel="stylesheet" href="styles/scenes.css">
+    <style>
+        /* General Styles */
+        body {
+            font-family: sans-serif;
+            margin: 0;
+        }
+
+        .navbar {
+            padding: 20px;
+            text-align: center;
+        }
+
+        .tagline {
+            font-style: italic;
+            font-size: 0.8em;
+        }
+
+        .content {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            padding: 20px;
+        }
+
+        .page_control_ {
+            padding: 10px 15px;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 1em;
+            border: none;
+        }
+
+        /* Upload Audio Popup Styles */
+        #upload_audio {
+            z-index: 10;
+            display: none;
+            padding: 40px;
+            position: absolute;
+            left: 30%;
+            top: 35%;
+            width: 40%;
+            height: 30%;
+            border-radius: 10px;
+            background-color: rgb(255, 255, 255);
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+
+        #upload_audio p {
+            margin-bottom: 20px;
+            font-size: 5vh;
+            text-align: center;
+            width: 100%;
+        }
+
+        #upload_audio div:first-of-type {
+            width: 96%;
+            display: flex;
+            column-gap: 10px;
+            justify-content: flex-start;
+            align-items: center;
+        }
+
+        #speaker_file_picker {
+            width: 40%;
+            height: auto;
+            color: white;
+            font-size: 1.8vh;
+            border-radius: 10px;
+            padding: 5px;
+            background-color: gray;
+        }
+
+        #upload_audio div:last-of-type {
+            position: absolute;
+            width: 90%;
+            bottom: 10px;
+            display: flex;
+            justify-content: flex-end;
+            column-gap: 10px;
+        }
+
+        #back_ {
+            color: black;
+            background-color: rgba(8, 8, 8, 0);
+            width: 15%;
+            height: 100%;
+        }
+
+        #upload_and_generate {
+            display: flex;
+            align-items: center;
+            column-gap: 5px;
+            width: 35%;
+            height: 100%;
+            position: relative;
+            justify-content: center;
+        }
+
+        /* Content Styles */
+        #message p {
+            font-size: 7vh;
+            color: white;
+            font-weight: bold;
+        }
+
+        #progress_container {
+            background-color: rgba(128, 128, 128, 0.308);
+            width: 55%;
+            height: 6.5vh;
+            border-radius: 10px;
+            border: 1px solid gray;
+            box-shadow: 2px 2px 10px gray;
+            padding: 5px;
+        }
+
+        #audio_progress {
+            width: 70%;
+            height: 100%;
+            background-color: #0b8617;
+            border-radius: 10px;
+        }
+
+        #generation_output {
+            font-size: 1.5vh;
+            color: white;
+        }
+
+        .content>div:last-of-type {
+            width: 40%;
+            height: 8%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            column-gap: 10px;
+        }
+
+        /* Button Styles */
+        #back_ {
+            background-color: rgba(128, 128, 128, 0.308);
+            width: 45%;
+            height: 100%;
+        }
+
+        #next_ {
+            display: flex;
+            align-items: center;
+            column-gap: 5px;
+            width: 35%;
+            height: 100%;
+            justify-content: center;
+        }
+
+        /* Loader Styles */
+        .loader {
+            display: none;
+            border: 4px solid rgba(0, 0, 0, 0.1);
+            border-top: 4px solid rgb(255, 255, 255);
+            border-radius: 50%;
+            width: 3vh;
+            height: 3vh;
+            animation: spin 2s linear infinite;
+        }
+
+        @keyframes spin {
+            0% {
+                transform: rotate(0deg);
+            }
+
+            100% {
+                transform: rotate(360deg);
+            }
+        }
+    </style>
 </head>
 
 <body>
@@ -15,58 +191,47 @@
         </div>
     </header>
 
-    <div id="upload_audio"
-        style="z-index: 10; display: none; padding: 40px; position: absolute;left: 30%;top: 35%; width: 40%;height: 30%;border-radius: 10px;background-color: rgb(255, 255, 255);">
-        <p style="margin-bottom: 20px; font-size: 5vh;width: 100%;text-align: center;">Select Speaker Voice</p>
-        <div style=" width: 96%; display: flex; column-gap: 10px;justify-content: flex-start;align-items: center;">
+    <div id="upload_audio">
+        <p>Select Speaker Voice</p>
+        <div>
             <p style="font-size: 2vh;">Select Speaker Voice: </p>
-            <input type="file" name="" id="speaker_file_picker" placeholder="" accept="audio/*"
-                style="width: 40%; height: auto;color: white; font-size: 1.8vh; border-radius: 10px; padding: 5px;background-color: gray;">
+            <input type="file" name="" id="speaker_file_picker" placeholder="" accept="audio/*">
         </div>
-        <div
-            style="position: absolute;width: 90%;bottom: 10px;display: flex;justify-content: flex-end;column-gap: 10px;">
-            <button onclick="close_upload_popup()" class="page_control_" id="back_"
-                style="color: black; background-color: rgba(8, 8, 8, 0); width: 15%; height: 100%;">
+        <div>
+            <button onclick="close_upload_popup()" class="page_control_" id="back_">
                 Cancel
             </button>
-            <button onclick="upload_audio()" class="page_control_" id="upload_and_generate"
-                style="display: flex; align-items: center; column-gap: 5px; width: 35%; height: 100%; position: relative;display: flex;justify-content: center;align-items: center;">
+            <button onclick="upload_audio()" class="page_control_" id="upload_and_generate">
                 Generate Audio
-                <!-- <p id="generate_text">Generate Audio</p> 
-
-                <div class="loader" id="loading_animation"
-                    style="display: none; border: 4px solid rgba(0, 0, 0, 0.1); border-top: 4px solid rgb(255, 255, 255); border-radius: 50%; width: 3vh; height: 3vh; animation: spin 2s linear infinite;">
-                </div> -->
+                <div class="loader" id="loading_animation">
+                </div>
             </button>
 
         </div>
     </div>
     <div class="content">
         <div id="message">
-            <p style="font-size: 7vh;color: white;font-weight: bold;">Hurrah! Generating Video</p>
+            <p>Hurrah! Generating Video</p>
         </div>
 
-        <div id="progress_container" style="background-color: rgba(128, 128, 128, 0.308); width: 55%; height: 6.5vh;border-radius: 10px;border: 1px solid gray;
-            box-shadow: 2px 2px 10px gray;padding:5px;">
-            <div id="audio_progress" style="width: 70%;height: 100%;background-color: #0b8617;border-radius: 10px;">
+        <div id="progress_container">
+            <div id="audio_progress">
             </div>
         </div>
 
-        <p id="generation_output" style="font-size: 1.5vh;color: white;">
+        <p id="generation_output">
             Preparing Video...
         </p>
 
-        <div style="width: 40%;height: 8%; display: flex;justify-content: center;align-items: center;column-gap: 10px;">
-            <button onclick="go_back()" class="page_control_" id="back_"
-                style="background-color: rgba(128, 128, 128, 0.308); width: 45%; height: 100%;">
+        <div>
+            <button onclick="go_back()" class="page_control_" id="back_">
                 Back
             </button>
 
-            <button onclick="open_upload_popup()" class="page_control_" id="next_" style="display: flex; align-items: center; column-gap: 5px; width: 35%; height: 100%; display: flex;justify-content: center;align-items: center;">
+            <button onclick="open_upload_popup()" class="page_control_" id="next_">
                 <p id="generate_text">Generate Video</p>
 
-                <div class="loader" id="loading_animation"
-                    style="display: none; border: 4px solid rgba(0, 0, 0, 0.1); border-top: 4px solid rgb(255, 255, 255); border-radius: 50%; width: 3vh; height: 3vh; animation: spin 2s linear infinite;">
+                <div class="loader" id="loading_animation">
                 </div>
             </button>
         </div>
@@ -102,7 +267,7 @@
         }
 
         function upload_audio() {
-        
+
             loader.style.display = "block";
             generateText.style.display = "none";
             const file = audio_input.files[0];
@@ -117,10 +282,10 @@
             generateText.style.display = "flex";
         }
 
-        function go_next(){
+        function go_next() {
             window.location.href = 'image_render.html';
         }
-        function go_back(){
+        function go_back() {
             history.back()
         }
     </script>
