--- a/renderer/image_render.html
+++ b/renderer/image_render.html
@@ -20,7 +20,7 @@
             z-index: 9;
             width: 80%;
             height: 80%;
-            margin-top: -30px;
+            /* margin-top: -30px; */
             border-radius: 10px;
             overflow-y: scroll;
             scrollbar-width: none;
