--- a/renderer/story_scenes.html
+++ b/renderer/story_scenes.html
@@ -63,7 +63,7 @@
             console.log(draft_story);
             test_scenes = (draft_story && draft_story.draft_story) ? draft_story.draft_story : await generate_scenes(story_data.prompt, story_data.duration);
 
-            if (story_data & test_scenes.scenes) {
+            if (story_data) {
 
                 test_scenes.scenes.forEach((scene, index) => renderSceneCard(scene, index, test_scenes.story_id, draft_story && draft_story.draft_story ? true : false, true));
 
