--- a/renderer/generate_audio.html
+++ b/renderer/generate_audio.html
@@ -19,7 +19,7 @@
     <div id="upload_audio">
         <p>Select Speaker Voice</p>
         <div>
-            <p style="font-size: 2vh;">Select Speaker: </p>
+            <p style="font-size: 1.5vw;">Select Speaker: </p>
             <button type="button" id="speaker_file_picker" style="
                 outline: none;
                 border-radius: 10px; 
@@ -27,7 +27,9 @@
                 background-color: white;
                 color: #736e6e;
                 text-align: start;
-                font-size: 1.4vh;
+                font-size: 1.05vw;
+                padding-right: 10px;
+                overflow: hidden;
                 padding-left: 10px;"
             >
                 Select Speaker File
@@ -37,7 +39,7 @@
                 Cancel
             </button>
             <button class="page_control_" style="text-align: center; background-color: rgb(90 43 141);color: white;" id="upload_and_generate">
-                Generate Audio
+                Upload Audio
                 <div class="loader" id="loading_animation">
                 </div>
             </button>
