update image rendering

--- a/renderer/image_render.html
+++ b/renderer/image_render.html
@@ -40,7 +40,7 @@
                         </div>
                         <div class="scenes_controls_">
                             <button type="button" class="refresh_prompt_btn_">
-                                <img src="../assets/img/refresh.png" width="30" height="30"
+                                <img src="../assets/img/refresh.png" width="20vw" height="20vw"
                                     style="background-color:transparent;" alt="" srcset="">
                             </button>
                             <button id="update_prompt" class="update_prompt_btn_">Update</button>
@@ -198,7 +198,7 @@
                             <div class="shimmer_"></div>
                             <div class="spinner_circle"></div>
                         </div>
-                        <div class="scene_content_" style="display: none;height: 200px;">
+                        <div class="scene_content_" style="display: none;height: clamp(100px, 20vh, 200px);">
                             <div class="scene_ids_">Scene${index+1}</div>
                             <div class="scene_prompt_">
                                 <textarea class="scene_prompt_textarea" name="scene_output_${sceneId}" id="scene_output_${sceneId}" cols="30">${sceneText}</textarea>
@@ -206,7 +206,7 @@
                             </div>
                             <div class="scenes_controls_">
                                 <button type="button" class="refresh_prompt_btn_" data-story-id="${storyId}" data-scene-id="${sceneId}">
-                                    <img src="../assets/img/refresh.png" width="30" height="30"
+                                    <img src="../assets/img/refresh.png" width="20vw" height="20vw"
                                         style="background-color:transparent;" alt="" srcset="">
                                 </button>
                                 <button id="update_prompt_${sceneId}"  data-story-id="${storyId}" data-scene-id="${sceneId}" class="update_prompt_btn_">Update</button>
