--- a/renderer/index.html
+++ b/renderer/index.html
@@ -16,10 +16,10 @@
 
   <div class="content">
     <div id="message">
-      <p style="font-size: 7vh;color: white;font-weight: bold;">Welcome To Story Generator</p>
-      <p style="font-size: 3vh;color: white;font-weight: normal;">Let Build something Special Together</p>
+      <p style="font-size: 5vw;color: white;font-weight: bold;">Welcome To Story Generator</p>
+      <p style="font-size: 1.8vw;color: white;font-weight: normal;">Let Build something Special Together</p>
     </div>
-    <button id="next_" class="page_control_">
+    <button id="next_" style="margin-top: 15px;" class="page_control_">
       Start Now
     </button>
   </div>
