update prompt generation

--- a/renderer/prompt_page.html
+++ b/renderer/prompt_page.html
@@ -18,13 +18,13 @@
     <div class="content">
         <div id="message">
             <p style="font-size: 7vh;color: white;font-weight: bold;">We will love to hear you Idea’s  </p>
-            <p style="font-size: 3vh;color: white;font-weight: normal;">And leave everything on us</p>
+            <p style="font-size: 1.8vw;color: white;font-weight: normal;">And leave everything on us</p>
         </div>
-        <div style="width: 99%; display: flex;flex-direction: column; justify-content: center;align-items: center;row-gap: 5px;height: 10vh;margin-top: 2vh;">
+        <div style="width: 99%; display: flex;flex-direction: column; justify-content: center;align-items: center;row-gap: 5px;height: 12vh;margin-top: 2vh;">
             <div id="prompt_input" style="max-width: 800px;">
                 <input type="text" id="story_input" placeholder="Tell me somthing about you're story...">
             </div>
-            <div style="display: flex;width: 40%;column-gap: 5px;justify-content: center;">
+            <div style="display: flex;width: 40%;column-gap: 5px;height: 45%; justify-content: center;">
                 <div class="select_input_" id="video_length_input">
                     <select id="video_length_input_select">
                         <option value="" selected>Duration</option>
